--- a/index.css
+++ b/index.css
@@ -1,3 +1,58 @@
-#appHeading{
-    color:red;
+.header{
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+}
+.logo{
+    width: 200px;
+    height: 100px;
+}
+.nav-items > ul{
+    display: flex;
+   
+}
+.nav-items > ul > li{
+    font-size: larger;
+    padding: 20px;
+    list-style-type: none;
+}
+
+.card-details{
+    width: 250px;
+    height: 350px;
+    padding: 10px;
+    border: 1px solid gray;
+    margin: 10px;
+}
+    .card-img{
+    width: 100%;
+    height: 50%;
+}
+.card-title{
+    font-size: large;
+    font-weight: bold;
+}
+.search{
+    padding: 10px;
+}
+.res-cards{
+    width: 300px;
+    height: 400px;
+    display: flex;
+}
+.delivery-details > ul{ 
+display: flex;
+justify-content: space-between;
+
+}
+
+.delivery-details > ul > li{
+    list-style-type: none;
+}
+
+.res-cards-all{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 10px;
+    justify-content: space-between;
 }
