--- a/index.css
+++ b/index.css
@@ -56,3 +56,26 @@ justify-content: space-between;
     margin: 10px;
     justify-content: space-between;
 }
+
+.shimmer-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card-details-shimmer{
+    width: 250px;
+    height: 350px;
+    padding: 10px;
+    border: 1px solid gray;
+    margin: 10px;
+    background-color: #f0f0f0;
+}
+.Search{
+    margin: 10px 0px;;
+}
+.Filter{
+    display: flex;
+}
+.filter-btn{
+    margin: 0px 10px;
+}
